# interviews

./: README.md
IRC138782/: Gemini-Interview-Guide.md
IRC138782/docs/: notes.md
IRC138782/docs/gemini/: linux.md
IRC138782/scripts/go/chat/: go.mod  setup_local_chat_openshift.go
IRC138782/scripts/go/inference/: deploy_inference.go  go.mod
IRC138782/scripts/go/llamacpp/: go.mod  setup_local_llamacpp_openshift.go
IRC138782/scripts/jupyter/: README.md  deploy-jupyterhub.zsh  deploy_jupyterhub.go  examples.zsh  go.mod
IRC138782/scripts/jupyter/manifests/: configmap.yaml  deployment-fixed.yaml  deployment.yaml  jupyterhub_config.py  kustomization.yaml  pvc.yaml  rbac.yaml  route.yaml  secret.yaml  service.yaml
IRC138782/scripts/openshift-setup/: Containerfile  cleanup-disk-space.zsh  deploy-local-ocp.zsh  manage-disk-space.zsh  package.json  server.js
IRC138782/scripts/openshift-setup/openshift/: deployment.yaml  route.yaml  service.yaml
IRC138782/scripts/openshift-users/: login-admin.zsh  login-developer.zsh
IRC140710/pre-study-skeleton/: .gitignore  CHECKLIST.md  Dockerfile  MIDAS_WEB_SERVER_FIX.md  MILK_FIXES_SUMMARY.md  MILK_ISSUES_AND_SOLUTIONS.md  README.md  final-midas-web-fix.sh  fix-midas-web-binding.sh  verify-midas-fix.sh
IRC140710/pre-study-skeleton/ansible/: inventory
IRC140710/pre-study-skeleton/ansible/playbooks/: build_host.yml
IRC140710/pre-study-skeleton/chats/: hpc-interview-prep-session-2025-10-21.md
IRC140710/pre-study-skeleton/ci/: .gitlab-ci.yml
IRC140710/pre-study-skeleton/ci/containers/: Apptainer.def  Dockerfile
IRC140710/pre-study-skeleton/ci/scripts/: run_reframe.sh
IRC140710/pre-study-skeleton/docs/: Jason-Gochanour-CV-IRC140710.html  Jason-Gochanour-CV-IRC140710.md  convert.sh  crc_ntp_troubleshooting.md  debugging_mpi.md  debugging_totalview.md  milk_analysis.md  profiling_nsight.md  slurm_quickstart.md  spack_quickstart.md  spack_troubleshooting.md
IRC140710/pre-study-skeleton/examples/ai_ml/: distributed_training.py  slurm_distributed_training.sbatch
IRC140710/pre-study-skeleton/examples/mpi_debugging/: CMakeLists.txt  mpi_deadlock.c  mpi_race_condition.c
IRC140710/pre-study-skeleton/reframe/: reframe_settings.py
IRC140710/pre-study-skeleton/spack/: install_spack.sh  spack.yaml  spack_example.sh
(+87 files in other folders)
